manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dso-sample-deploy
  namespace: dso-sample-deploy
spec:
  selector:
    app: dso-sample-deploy
    deploymentconfig: dso-sample-deploy
  ipFamilies:
    - IPv4
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  ports:
    - name: 3333-tcp
      protocol: TCP
      port: 3333
      targetPort: 3333
